--- a/file_server/content/css/controles.styl
+++ b/file_server/content/css/controles.styl
@@ -1,3 +1,11 @@
+$test-color = pink
+$standard-font-size = 11pt
+
+*
+	font-size: $standard-font-size
+
+
+	
 h3
 	margin-bottom: 20px;
 
@@ -23,9 +31,10 @@ h3
 				label
 					line-height: 25px
 	.grid-row
-		height: 300px;
+		height: 350px;
 		width: 100%;
 		position: relative;
+		border-bottom: 2px solid #bbb
 		.grid
 			position: absolute
 			top: 1px
@@ -119,3 +128,36 @@ h3
 								color: maroon
 						&.date
 							text-align: right
+	.command-row
+		/*background: $test-color*/
+		.buttonBar
+			padding-top: 20px
+
+.detailsContainer
+	position: absolute
+	top: 0
+	left: 230px
+	bottom: 0
+	right: 0
+	padding: 10px
+	.form
+		margin-top: 30px
+	.header
+		height: 25px
+		line-height: 25px
+		font-size: 1.5em
+	.noResultsMessage
+		font-size: 14px
+		letter-spacing: 0.02em
+		color: #929292
+		font-weight: 500
+		padding-top: 60px
+		text-align: center
+	.buttonBar
+		position: absolute
+		overflow: hidden
+		bottom: 0
+		left: 0
+		right: 0
+		
+		
