--- a/file_server/content/css/controles.styl
+++ b/file_server/content/css/controles.styl
@@ -1,9 +1,8 @@
 $test-color = pink
-$standard-font-size = 11pt
+$standard-font-size = 10pt
 
-*
-	font-size: $standard-font-size
-
+//*
+//	font-size: $standard-font-size
 
 	
 h3
@@ -11,7 +10,7 @@ h3
 
 .constateringen
 	.info-row
-		height: 200px
+		height: 150px
 		width: 100%
 		border-bottom:	1px solid #bbb
 		.info
@@ -27,7 +26,7 @@ h3
 			padding: 20px
 			/*border:	1px solid gray*/
 			.filter
-				height: 25px
+				/*height: 25px*/
 				label
 					line-height: 25px
 	.grid-row
@@ -35,99 +34,8 @@ h3
 		width: 100%;
 		position: relative;
 		border-bottom: 2px solid #bbb
-		.grid
-			position: absolute
-			top: 1px
-			left: 0
-			right: 0
-			bottom: 0
-			overflow-x: hidden;
-			overflow-y: auto;
-			&.container
-				height: 100%
-				overflow-x: hidden;
-				overflow-y: auto;
-				table
-					min-width: 100%
-				.header
-					.column
-						color: #758292
-						line-height: 2em
-						&.ascending .sticky span:after
-							content: "▲"
-							font-size: .7em
-							display: inline-block
-							position: relative
-							padding-left: 10px
-						&.descending .sticky span:after
-							content: "▼"
-							font-size: .7em
-							display: inline-block
-							position: relative
-							padding-left: 10px
-						.sticky
-							position: absolute
-							top: 0
-							margin-left: -1px
-							width: 100%
-							line-height: 2em
-							text-align: left;
-							padding: 0 15px 0 15px
-							z-index: 3
-							span
-								font-weight: 600
-								font-size: 9pt
-							&:before
-								position: absolute
-								top: 0
-								left: 0
-								right: 0
-								content: ""
-								display: block
-								height: 2em
-								background-image: -webkit-gradient(linear, left top, left bottom, color-stop( 0.3, rgba(255, 255, 255, 1) ), color-stop( 1.0, rgba(255, 255, 255, 0) ));
-								background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, .8) 30%, rgba(255, 255, 255, 0) 100% );
-								background-image: -moz-linear-gradient(top, rgba(255, 255, 255, .8) 30%, rgba(255, 255, 255, 0) 100% );
-								background-image: -ms-linear-gradient(top, rgba(255, 255, 255, .8) 30%, rgba(255, 255, 255, 0) 100% );
-								background-image: -o-linear-gradient(top, rgba(255, 255, 255, .8) 30%, rgba(255, 255, 255, 0) 100% );
-								background-image: linear-gradient(top, rgba(255, 255, 255, .8) 30%, rgba(255, 255, 255, 0) 100% );
-								z-index: -1
-							&:after
-								content: ""
-								display: block
-								border-bottom: 1px solid #CDCDCD
-								border-left: 1px solid #CDCDCD
-								position: absolute
-								background: rgba(255, 255, 255, 0.7)
-								left: 0
-								right: 0
-								top: 0
-								bottom: 0
-								z-index: -2
-				.row
-					background: white
-					&.top-spacer
-						height: 2em
-						background: white
-					&:nth-child(even)
-						background: #F6F7F9
-					.cell
-						min-width: 80px;
-						padding: 0 15px 0 15px
-						line-height: 2em
-						&, *
-							white-space: nowrap
-							color: #808080
-							font-size: 9pt
-							font-weight: 400
-						&:nth-child(1)
-							color: black
-						&.number
-							text-align: right
-							&.negative
-								color: maroon
-						&.date
-							text-align: right
+		.row .cell .selectbox
+			min-width: 50px
 	.command-row
 		/*background: $test-color*/
 		.buttonBar
