--- a/file_server/content/css/crafity.styl
+++ b/file_server/content/css/crafity.styl
@@ -10,7 +10,9 @@ standard-font-size = 10pt
 	letter-spacing: 0px
 	cursor: default
 
-:focus
+*:active,
+*:hover,
+*:focus
 	outline: none
 
 body
@@ -18,7 +20,7 @@ body
 	font-size: standard-font-size
 	background-color: #FFFFFF
 	margin-left: 380px
-	-moz-user-select: -moz-none
+	//-moz-user-select: -moz-none
 	-khtml-user-select: none
 	-webkit-user-select: none
 	-ms-user-select: none
@@ -27,6 +29,22 @@ body
 	-ms-user-select: none
 	user-select: none
 	padding: 20px
+
+::-moz-selection { background: transparent; }
+::selection      { background: transparent; } 
+		
+::-webkit-input-placeholder
+	font-weight: 200
+	color: #d8d8dd
+::-moz-placeholder
+	font-weight: 200
+	color: #d8d8dd
+:-moz-placeholder
+	font-weight: 200
+	color: #d8d8dd
+:-ms-input-placeholder
+	font-weight: 200
+	color: #d8d8dd
 
 h1, h2, h3
 	//font-family: "Helvetica Neue"
@@ -56,6 +74,8 @@ h3
 
 .field
 	line-height: 1.5em;
+	.invalid
+		color: red;
 	.form &,
 	.form.edit &
 		label
@@ -155,16 +175,93 @@ h3
 		-webkit-appearance: searchfield
 		white-space: initial
 
+little-arrow-size=3px
 
 .selectbox
-	border: none
+	selection(important=)
+		color: white important
+		border-top: 1px solid #587FEE important;
+		border-bottom: 1px solid #0D52EB important;
+		background: #587FEE
+		/***  CSS Gradient  ***/
+		/*  Chrome 1-9 and Safari 4-5.0  */
+		background-image: -webkit-gradient(linear, left top, left bottom, color-stop( 0.0, #587FEE ), color-stop( 1.0, #2361F5 )) important;
+		/*  Chrome 10+ Safari 5.1+ Mobile Safari  */
+		background-image: -webkit-linear-gradient(top, #587FEE, #2361F5 ) important;
+		/*  Firefox 3.6+  */
+		background-image: -moz-linear-gradient(top, #587FEE, #2361F5 ) important;
+		/*  IE 10+  */
+		background-image: -ms-linear-gradient(top, #587FEE, #2361F5 ) important;
+		/*  Opera 11.10+  */
+		background-image: -o-linear-gradient(top, #587FEE, #2361F5 ) important;
+		/*  W3C  */
+		background-image: linear-gradient(top, #587FEE, #2361F5 ) important;
 	background: transparent
 	-webkit-appearance: none
 	-webkit-background-clip: none	
-	height: 18px
 	border-radius: 0
+	position: relative
+	display: inline-block
+	padding: 2px (5 * little-arrow-size) 2px 2px
+	border: 1px solid transparent
+	min-width: 20px
+	span
+		white-space: pre !important
+	&.edit
+		&.collapsed:focus
+			border: 1px solid #7DB0E1
+			box-shadow: #7DB0E1 0px 0px 5px, #7DB0E1 0px 0px 5px inset
+		&:before,
+		&:after
+			display: block
+			content: "▲▼"
+			position: absolute
+			right: 10px
+			top: 50%
+			width: 0px
+			height: 0px
+			font-size: 4pt
+		&:after
+			content: "▲"
+			margin-top: (-2 * (little-arrow-size + 1) - 2)
+		&:before
+			content: "▼"
+			margin-top: -3px
+	.option-list
+		display: none
+		position: absolute
+		top: -5px
+		left: -20px
+		min-width: 100%
+		background: white
+		border: 1px solid #EAEAEA
+		padding: 4px 0 4px 0
+		z-index: 10
+		border-radius: 3px
+		box-shadow: #B6B6B6 0 10px 10px
+		.option
+			padding: 0px 20px 0px 20px
+			line-height: 1.2em
+			position: relative
+			white-space: pre
+			height: 1.2em
+			border-top: 1px solid transparent;
+			border-bottom: 1px solid transparent;
+			&.hover,
+			&:hover
+				selection(!important)
+			&.selected:before
+				content: "✓"
+				display: block
+				position: absolute
+				left: 7px
+				top: 0
+		&.nohover .option.selected
+			selection()
+		&.visible
+			display: block
 	.selectfield &
-		padding-left: 10px
+		margin-left: 7px
 
 .list
 	border-right: 1px solid #E8E8E8
@@ -178,7 +275,7 @@ h3
 		right: 0
 		left: 0
 		bottom: 0
-		overflow: scroll
+		overflow: auto
 		.ListItem
 			height: 25px
 			line-height: 25px
@@ -193,47 +290,6 @@ h3
 				color: #0061FF
 				.content
 					border-bottom: 0px solid white
-
-.clients
-	position: absolute
-	top: 0
-	right: 0
-	left: 0
-	bottom: 0
-	.clientList
-		background-color: #FCFCFC
-		position: absolute
-		//display: block
-		top: 0
-		width: 230px
-		left: 0
-		bottom: 0
-	.detailsContainer
-		position: absolute
-		top: 0
-		left: 230px
-		bottom: 0
-		right: 0
-		padding: 10px
-		.form
-			margin-top: 30px
-		.header
-			height: 25px
-			line-height: 25px
-			font-size: 1.5em
-		.noResultsMessage
-			font-size: 14px
-			letter-spacing: 0.02em
-			color: #929292
-			font-weight: 500
-			padding-top: 60px
-			text-align: center
-		.buttonBar
-			position: absolute
-			overflow: hidden
-			bottom: 0
-			left: 0
-			right: 0
 
 .buttonBar
 	height: 25px
@@ -275,4 +331,98 @@ h3
 	&[disabled]
 		color: #C8C8C8
 		&:active
-			box-shadow: none
+			box-shadow: none		
+.grid
+	position: absolute
+	top: 0
+	left: 0
+	right: 0
+	bottom: 0
+	overflow-x: hidden;
+	overflow-y: auto;
+	.container
+		height: 100%
+		overflow-x: hidden;
+		overflow-y: auto;
+		table
+			min-width: 100%
+		.header
+			.column
+				color: #758292
+				line-height: 2em
+				&.ascending .sticky span:after
+					content: "▲"
+					font-size: .7em
+					display: inline-block
+					position: relative
+					padding-left: 10px
+				&.descending .sticky span:after
+					content: "▼"
+					font-size: .7em
+					display: inline-block
+					position: relative
+					padding-left: 10px
+				.sticky
+					position: absolute
+					top: 0
+					margin-left: -1px
+					width: 100%
+					line-height: 2em
+					text-align: left;
+					padding: 0 15px 0 15px
+					z-index: 3
+					span
+						font-weight: 600
+						font-size: .9em
+					&:before
+						position: absolute
+						top: 0
+						left: 0
+						right: 0
+						content: ""
+						display: block
+						height: 2em
+						background-image: -webkit-gradient(linear, left top, left bottom, color-stop( 0.3, rgba(255, 255, 255, 1) ), color-stop( 1.0, rgba(255, 255, 255, 0) ));
+						background-image: -webkit-linear-gradient(top, rgba(255, 255, 255, .8) 30%, rgba(255, 255, 255, 0) 100% );
+						background-image: -moz-linear-gradient(top, rgba(255, 255, 255, .8) 30%, rgba(255, 255, 255, 0) 100% );
+						background-image: -ms-linear-gradient(top, rgba(255, 255, 255, .8) 30%, rgba(255, 255, 255, 0) 100% );
+						background-image: -o-linear-gradient(top, rgba(255, 255, 255, .8) 30%, rgba(255, 255, 255, 0) 100% );
+						background-image: linear-gradient(top, rgba(255, 255, 255, .8) 30%, rgba(255, 255, 255, 0) 100% );
+						z-index: -1
+					&:after
+						content: ""
+						display: block
+						border-bottom: 1px solid #CDCDCD
+						border-left: 1px solid #CDCDCD
+						position: absolute
+						background: rgba(255, 255, 255, 0.7)
+						left: 0
+						right: 0
+						top: 0
+						bottom: 0
+						z-index: -2
+		.row
+			background: white
+			&.top-spacer
+				height: 2em
+				background: white
+			&:nth-child(even)
+				background: #F6F7F9
+			.cell
+				min-width: 80px;
+				white-space: pre
+				padding: 0 15px 0 15px
+				line-height: 2em
+				&, *
+					white-space: nowrap
+					color: #808080
+					font-weight: 400
+				&:nth-child(1),
+				&:nth-child(1) *
+					color: black
+				&.number
+					text-align: right
+					&.negative
+						color: maroon
+				&.date
+					text-align: right
