--- a/file_server/content/css/controles.styl
+++ b/file_server/content/css/controles.styl
@@ -8,6 +8,17 @@ $standard-font-size = 10pt
 h3
 	margin-bottom: 20px;
 
+.main.menu
+	background-color: #F7F7F7
+	position: absolute
+	top: 0
+	left: 0
+	bottom: 0
+	min-width: 150px
+	padding: 20px
+	z-index: -10
+	border-right: #E8E8E8 1px solid
+
 .constateringen
 	.info-row
 		height: 150px
