Added a test highlight color for selected grid row

--- a/file_server/content/css/controles.styl
+++ b/file_server/content/css/controles.styl
@@ -124,4 +124,7 @@ h3
 		left: 0
 		right: 0
 		
-		
+.grid .container .row.selected
+	background-image: none !important
+	background-color: #F5BB90 !important
+	
