changed the selected grid row color

--- a/file_server/content/css/controles.styl
+++ b/file_server/content/css/controles.styl
@@ -126,5 +126,5 @@ h3
 		
 .grid .container .row.selected
 	background-image: none !important
-	background-color: #F5BB90 !important
+	background-color: blue !important //-#F5BB90 #CDF7A2 !important
 	
