--- a/file_server/content/css/controles.styl
+++ b/file_server/content/css/controles.styl
@@ -63,22 +63,30 @@ h3
 			float: right
 			margin: initial
 			line-height: 22px
-
-.constateringen
+			
+		
+.constateringen, .controles
 	.info-row
-		height: 150px
-		width: 100%
-		border-bottom:	1px solid #bbb
+		/*width: 100%*/
+		height: 180px
+		min-width: 700px
+		border-bottom: 1px solid #bbb
 		.info
-			width: 40%
-			height: 150px
-			padding: 20px
+			width: 350px //- 510px fakticheski
+			height: 140px //- 180px fakticheski s padding top i bottom
+			/*width: 40%*/
+			/*height: 150px*/
+			padding: 20px 140px 20px 20px
+			/*padding: 20px*/
 			float: left
 			/*border:	1px solid black*/
+			h2
+				margin-bottom: 20px;
 		.filter-container
 			float: left
-			width: 40%
-			height: 150px
+			min-width: 450px
+			height: 140px
+			/*width: 40%*/
 			padding: 20px
 			/*border:	1px solid gray*/
 			.filter
