--- a/file_server/content/css/controles.styl
+++ b/file_server/content/css/controles.styl
@@ -8,6 +8,9 @@ $standard-font-size = 10pt
 h3
 	margin-bottom: 20px;
 
+h4
+	margin-bottom: 10px;
+	
 .main.menu
 	background-color: #F7F7F7
 	position: absolute
@@ -71,7 +74,7 @@ h3
 .constateringen, .controles
 	.info-row
 		/*width: 100%*/
-		height: 180px
+		height: 200px
 		min-width: 1000px
 		border-bottom: 1px solid #bbb
 		.info
