--- a/file_server/content/css/controles.styl
+++ b/file_server/content/css/controles.styl
@@ -86,6 +86,8 @@ h4
 			/*padding: 20px*/
 			float: left
 			/*border:	1px solid black*/
+			background: rgb(241, 241, 241);
+			box-shadow: 10px 5px 12px gray;
 			h2
 				margin-bottom: 20px;
 		.filter-container
