JvdB: edit controle scherm toegevoegd

--- a/file_server/content/css/controles.styl
+++ b/file_server/content/css/controles.styl
@@ -25,13 +25,13 @@ h4
 		h2
 			margin-bottom: 5px
 	.menuitem
-		.medical-suitcase, .person, .out
+		.medical-suitcase, .person, .out, .edit
 			display: inline
 			clear: both
 			float: left
 			font-size: 12pt
 		&.selected
-			.medical-suitcase, .person, .out
+			.medical-suitcase, .person, .out . edit
 				color: blue
 
 
